# web_car_search

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt  test_connection.py
config/: database.py  settings.py
src/: main.py
src/api/v1/: router.py
src/models/: models.py
src/schemas/: car.py
src/services/: car_service.py
tests/: test_api.py  test_services.py
