[project]
name = "web-car-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dicttoxml>=1.7.16",
    "fastapi>=0.115.6",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.1",
]
